--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js'></script>  
-  <script type="text/javascript" src="{{ site.baseurl }}js/simpleJekyllSearch.js"></script>
+<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js'></script>  
+<script type="text/javascript" src="{{ site.baseurl }}js/simpleJekyllSearch.js"></script>
 <div class="home">
 
-<div id="search-demo-container">
-      <input type="text" id="search-input" placeholder="search...">
-      <ul id="results-container"></ul>
-    </div>
- 
+  <div id="search-demo-container">
+    <input type="text" id="search-input" placeholder="search..." class="form-control">
+    <ul id="results-container"></ul>
+  </div>
+
 
   <h1 class="page-heading">Posts</h1>
 
@@ -30,19 +30,33 @@ layout: default
 
 </div>
 
-
-
-
-
 <script type="text/javascript">
-      SimpleJekyllSearch.init({
-        searchInput: document.getElementById('search-input'),
-        resultsContainer: document.getElementById('results-container'),
-        dataSource: '/esgf-swt/search.json',
-        searchResultTemplate: '<li><a href="{{site.baseurl}}{url}" title="{desc}">{title}</a></li>',
-        noResultsText: 'No results found',
-        limit: 10,
-        fuzzy: false,
-      })
-    </script>
+  SimpleJekyllSearch.init({
+    searchInput: document.getElementById('search-input'),
+    resultsContainer: document.getElementById('results-container'),
+    dataSource: '/esgf-swt/search.json',
+    searchResultTemplate: '<li><a href="{{site.baseurl}}{url}" title="{desc}">{title}</a></li>',
+    noResultsText: 'No results found',
+    limit: 10,
+    fuzzy: false,
+  })
+</script>
+
+<style type="text/css">
+#search-demo-container {
+  max-width: 40em;
+  padding: 1em;
+  margin: 1em auto;
+  border: 1px solid lightgrey;
+}
+#search-input {
+  display: inline-block;
+  padding: .5em;
+  width: 100%;
+  font-size: 0.8em;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+</style>
 
