MBH: adding in sub search pages. fixes #5

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: default
 <script type="text/javascript" src="{{ site.baseurl }}/js/simpleJekyllSearch.js"></script>
 <div class="home">
 
+  <p class="navbar-text navbar-right">Topics: <a href="wget" class="navbar-link">wget</a> | <a href="openid" class="navbar-link">openid</a>  </p>
+
   <div id="search-demo-container">
     <input type="text" id="search-input" placeholder="search..." class="form-control">
     <ul id="results-container"></ul>
