MBH: adding search info

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ layout: default
     <input type="text" id="search-input" placeholder="search..." class="form-control">
     <ul id="results-container"></ul>
   </div>
+  <div class="alert alert-warning" role="alert">
+    Search box only searches the questions and tags, not the anwser text. To do a full body search please use your browser search <kbd><kbd>ctrl</kbd> + <kbd>F</kbd></kbd> or <kbd><kbd>command</kbd> + <kbd>F</kbd></kbd>  </div>
 
   <hr>
   <div class="list-groups">
