MBH: updating search box css to bootstrap

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@ layout: default
 <script type="text/javascript" src="{{ site.baseurl }}/js/simpleJekyllSearch.js"></script>
 <div class="home">
   <h1 class="page-heading">Questions</h1>
-  
-  <div id="search-demo-container">
-    <input type="text" id="search-input" placeholder="search..." class="form-control">
-    <ul id="results-container"></ul>
+  <div class="well well-lg">
+    <div id="form-group">
+      <input type="text" id="search-input" placeholder="Search..." class="form-control">
+      <ul id="results-container"></ul>
+    </div>
   </div>
   <div class="alert alert-warning" role="alert">
     Search box only searches the questions and tags, not the anwser text. To do a full body search please use your browser search <kbd><kbd>ctrl</kbd> + <kbd>F</kbd></kbd> or <kbd><kbd>command</kbd> + <kbd>F</kbd></kbd>  </div>
