TR: Topics changed: now exactly one in each question

--- a/data.html
+++ b/data.html
@@ -2,7 +2,9 @@
 layout: page
 permalink: /data/
 ---
-<h1 class="page-heading">data Questions</h1>
+<h1 class="page-heading">Data Questions</h1>
+<p>Data questions are concerning the data itself and processing options: experiments, variables, versions, data format, ...</p>
+<p>Each question is sorted into exactly one topic. See also <b>general</b> since questions of general interest and questions matching several topics are under topic general.</p>
 <hr>
 <div class="list-groups">
   {% for post in site.posts %}
