--- a/login.html
+++ b/login.html
@@ -2,7 +2,9 @@
 layout: page
 permalink: /login/
 ---
-<h1 class="page-heading">login Questions</h1>
+<h1 class="page-heading">Login Questions</h1>
+<p>Login questions concern account creation and page, password, OpenID, registration to a user group.</p>
+<p>Each question is sorted into exactly one topic. See also <b>general</b> since questions of general interest and questions matching several topics are under topic general.</p>
 <hr>
 <div class="list-groups">
   {% for post in site.posts %}
