--- a/wget.html
+++ b/wget.html
@@ -3,6 +3,8 @@ layout: page
 permalink: /wget/
 ---
 <h1 class="page-heading">WGET Questions</h1>
+<p>Under this topic are questions concerning ESGF download scripts (&quot;wget scripts&quot;).</p>
+<p>Each question is sorted into exactly one topic. See also <b>general</b> since questions of general interest and questions matching several topics are under topic general.</p>
 <hr>
 <div class="list-groups">
   {% for post in site.posts %}
