--- a/download.html
+++ b/download.html
@@ -2,7 +2,9 @@
 layout: page
 permalink: /download/
 ---
-<h1 class="page-heading">download Questions</h1>
+<h1 class="page-heading">Download Questions</h1>
+<p>Download questions concern all download methods except wget scripting: browser's download manager (download following a &quot;HTTP&quot; link), OPENDAP, Globus</p>
+<p>Each question is sorted into exactly one topic. See also <b>general</b> since questions of general interest and questions matching several topics are under topic general.</p>
 <hr>
 <div class="list-groups">
   {% for post in site.posts %}
