--- a/search.html
+++ b/search.html
@@ -2,7 +2,8 @@
 layout: page
 permalink: /search/
 ---
-<h1 class="page-heading">search Questions</h1>
+<h1 class="page-heading">Search Questions</h1>
+<p>Questions about data search in ESGF. Each question is sorted into exactly one topic. See also <b>general</b> since questions of general interest and questions matching several topics are under topic general.</p>
 <hr>
 <div class="list-groups">
   {% for post in site.posts %}
